--- a/android/app/src/main/res/layout/decider_layout.xml
+++ b/android/app/src/main/res/layout/decider_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.yksong.noomee.views.DeciderView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.yksong.noomee.views.DeciderView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:noomee="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,20 +22,23 @@
             <com.yksong.noomee.widget.LoadingView
                 android:id="@+id/restaurant_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="4dp">
+                android:layout_height="wrap_content">
                 <include
                     android:id="@+id/restaurant_view"
                     layout="@layout/restaurant_card_view" />
             </com.yksong.noomee.widget.LoadingView>
 
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                card_view:cardCornerRadius="5dp"
+                android:layout_margin="5dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:divider="?android:listDivider"
-                android:showDividers="middle"
-                android:layout_marginTop="5dp">
+                android:showDividers="middle">
                 <LinearLayout
                     android:id="@+id/cuisine_tab"
                     android:layout_width="match_parent"
@@ -73,6 +76,7 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
