--- a/android/app/src/main/res/layout/restaurant_card_view.xml
+++ b/android/app/src/main/res/layout/restaurant_card_view.xml
@@ -1,49 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp"
-    android:paddingTop="8dp"
-    android:divider="?android:listDivider"
-    android:background="?attr/selectableItemBackground"
-    android:clickable="true">
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="5dp"
+    android:layout_margin="5dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/restaurant_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:contentDescription="@string/restaurant_icon" />
+        android:id="@+id/restaurant_main_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="8dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="16dp">
-            <TextView
-                android:textSize="18sp"
-                android:id="@+id/restaurant_name"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/restaurant_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:contentDescription="@string/restaurant_icon" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:includeFontPadding="false"/>
+                android:orientation="vertical"
+                android:layout_marginLeft="16dp">
+                <TextView
+                    android:textSize="18sp"
+                    android:id="@+id/restaurant_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"/>
 
-            <ImageView
-                android:layout_marginTop="6dp"
-                android:id="@+id/restaurant_rating_image"
-                android:layout_width="87dp"
-                android:layout_height="18dp" />
+                <ImageView
+                    android:layout_marginTop="6dp"
+                    android:id="@+id/restaurant_rating_image"
+                    android:layout_width="87dp"
+                    android:layout_height="18dp" />
+            </LinearLayout>
+
         </LinearLayout>
 
+        <ImageView
+            android:layout_margin="3dp"
+            android:src="@drawable/powered_by_yelp_white"
+            android:layout_width="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_height="wrap_content" />
     </LinearLayout>
-
-    <ImageView
-        android:layout_margin="3dp"
-        android:src="@drawable/powered_by_yelp_white"
-        android:layout_width="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+</android.support.v7.widget.CardView>
