--- a/android/app/src/main/res/layout/decider_layout.xml
+++ b/android/app/src/main/res/layout/decider_layout.xml
@@ -19,14 +19,24 @@
                 android:layout_height="218dp"
                 android:name="com.google.android.gms.maps.MapFragment"/>
 
-            <com.yksong.noomee.widget.LoadingView
-                android:id="@+id/restaurant_container"
+            <android.support.v7.widget.CardView
+                android:id="@+id/restaurant_card_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <include
-                    android:id="@+id/restaurant_view"
-                    layout="@layout/restaurant_card_view" />
-            </com.yksong.noomee.widget.LoadingView>
+                android:layout_height="wrap_content"
+                card_view:cardCornerRadius="5dp"
+                android:layout_margin="5dp"
+                android:visibility="gone">
+
+                <com.yksong.noomee.widget.LoadingView
+                    android:id="@+id/restaurant_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <include
+                        android:id="@+id/restaurant_view"
+                        layout="@layout/restaurant_card_view" />
+                </com.yksong.noomee.widget.LoadingView>
+
+            </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
