--- a/android/app/src/main/res/layout/restaurant_card_view.xml
+++ b/android/app/src/main/res/layout/restaurant_card_view.xml
@@ -1,57 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    card_view:cardCornerRadius="5dp"
-    android:layout_margin="5dp">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp"
+    android:paddingTop="8dp"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true">
 
     <LinearLayout
-        android:id="@+id/restaurant_main_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
-        android:paddingTop="8dp"
-        android:background="?attr/selectableItemBackground"
-        android:clickable="true">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/restaurant_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:contentDescription="@string/restaurant_icon" />
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/restaurant_image"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:contentDescription="@string/restaurant_icon" />
-
-            <LinearLayout
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="16dp">
+            <TextView
+                android:textSize="18sp"
+                android:id="@+id/restaurant_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="16dp">
-                <TextView
-                    android:textSize="18sp"
-                    android:id="@+id/restaurant_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"/>
+                android:includeFontPadding="false"/>
 
-                <ImageView
-                    android:layout_marginTop="6dp"
-                    android:id="@+id/restaurant_rating_image"
-                    android:layout_width="87dp"
-                    android:layout_height="18dp" />
-            </LinearLayout>
-
+            <ImageView
+                android:layout_marginTop="6dp"
+                android:id="@+id/restaurant_rating_image"
+                android:layout_width="87dp"
+                android:layout_height="18dp" />
         </LinearLayout>
 
-        <ImageView
-            android:layout_margin="3dp"
-            android:src="@drawable/powered_by_yelp_white"
-            android:layout_width="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_height="wrap_content" />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+
+    <ImageView
+        android:layout_margin="3dp"
+        android:src="@drawable/powered_by_yelp_white"
+        android:layout_width="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_height="wrap_content" />
+</LinearLayout>
